# blog_api

./: .env.example  .gitignore  README.md  pyproject.toml  runserver.py
flaskblog/: __init__.py  auth.py  configs_list.py  decorators.py  middlewares.py  models.py  serializers.py  services.py  settings.py  utils.py  validators.py
flaskblog/blueprints/: articles_routes.py  auth_routes.py
